--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,24 @@
 Package: FloraExam
 Title: Danish Flora Exam app
 Version: 0.0.0.9000
-Authors@R: person('Derek', 'Corcoran', email = 'derek.corcoran.barrios@gmail.com', role = c('cre', 'aut'))
-Description: Generates a basic shiny app as an example of the test you would in the Danish Flora course.
+Authors@R: 
+    person("Derek", "Corcoran", , "derek.corcoran.barrios@gmail.com", role = c("cre", "aut"))
+Description: Generates a basic shiny app as an example of the test you
+    would in the Danish Flora course.
 License: AGPL (>= 3)
 Imports: 
     config (>= 0.3.1),
+    dplyr,
     golem (>= 0.3.5),
+    rlang,
     shiny (>= 1.7.4)
+Suggests: 
+    spelling,
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
 Encoding: UTF-8
+Language: en-US
 LazyData: true
-RoxygenNote: 7.1.1
+RoxygenNote: 7.2.2
+URL: https://github.com/Sustainscapes/FloraExam
+BugReports: https://github.com/Sustainscapes/FloraExam/issues
