Dataset to be added

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,11 +3,18 @@
 export(run_app)
 import(shiny)
 importFrom(dplyr,filter)
+importFrom(dplyr,slice_sample)
+importFrom(ggplot2,geom_bar)
+importFrom(ggplot2,ggplot)
+importFrom(ggplot2,theme_bw)
 importFrom(golem,activate_js)
 importFrom(golem,add_resource_path)
 importFrom(golem,bundle_resources)
 importFrom(golem,favicon)
 importFrom(golem,with_golem_options)
+importFrom(plotly,ggplotly)
+importFrom(plotly,plotlyOutput)
+importFrom(plotly,renderPlotly)
 importFrom(rlang,sym)
 importFrom(shiny,HTML)
 importFrom(shiny,column)
