Docker ready and boxplot ready

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,10 +3,15 @@
 export(run_app)
 import(shiny)
 importFrom(dplyr,filter)
+importFrom(dplyr,left_join)
+importFrom(dplyr,mutate)
+importFrom(dplyr,select)
 importFrom(dplyr,slice_sample)
-importFrom(ggplot2,geom_bar)
+importFrom(ggplot2,coord_flip)
+importFrom(ggplot2,geom_boxplot)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,theme_bw)
+importFrom(ggplot2,ylim)
 importFrom(golem,activate_js)
 importFrom(golem,add_resource_path)
 importFrom(golem,bundle_resources)
@@ -22,3 +27,8 @@ importFrom(shiny,shinyApp)
 importFrom(shiny,tagAppendAttributes)
 importFrom(shiny,tagList)
 importFrom(shiny,tags)
+importFrom(stats,na.omit)
+importFrom(stringr,str_remove_all)
+importFrom(stringr,str_to_sentence)
+importFrom(tidyr,everything)
+importFrom(tidyr,pivot_longer)
