--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,6 +8,8 @@ Description: Generates a basic shiny app as an example of the test you
 License: AGPL (>= 3)
 URL: https://github.com/Sustainscapes/FloraExam
 BugReports: https://github.com/Sustainscapes/FloraExam/issues
+Depends: 
+    R (>= 2.10)
 Imports: 
     config (>= 0.3.1),
     dplyr,
@@ -15,7 +17,10 @@ Imports:
     golem (>= 0.3.5),
     plotly,
     rlang,
-    shiny (>= 1.7.4)
+    shiny (>= 1.7.4),
+    stats,
+    stringr,
+    tidyr
 Suggests: 
     spelling,
     testthat (>= 3.0.0)
@@ -24,5 +29,3 @@ Encoding: UTF-8
 Language: en-US
 LazyData: true
 RoxygenNote: 7.2.2
-Depends: 
-    R (>= 2.10)
