--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
 importFrom(dplyr,select)
 importFrom(dplyr,slice_sample)
+importFrom(dplyr,starts_with)
 importFrom(ggplot2,coord_flip)
 importFrom(ggplot2,geom_boxplot)
 importFrom(ggplot2,ggplot)
@@ -17,7 +18,10 @@ importFrom(golem,add_resource_path)
 importFrom(golem,bundle_resources)
 importFrom(golem,favicon)
 importFrom(golem,with_golem_options)
+importFrom(plotly,add_trace)
 importFrom(plotly,ggplotly)
+importFrom(plotly,layout)
+importFrom(plotly,plot_ly)
 importFrom(plotly,plotlyOutput)
 importFrom(plotly,renderPlotly)
 importFrom(rlang,sym)
@@ -27,8 +31,10 @@ importFrom(shiny,shinyApp)
 importFrom(shiny,tagAppendAttributes)
 importFrom(shiny,tagList)
 importFrom(shiny,tags)
+importFrom(shinyWidgets,switchInput)
 importFrom(stats,na.omit)
 importFrom(stringr,str_remove_all)
+importFrom(stringr,str_replace_all)
 importFrom(stringr,str_to_sentence)
 importFrom(tidyr,everything)
 importFrom(tidyr,pivot_longer)
