--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,6 +11,7 @@ BugReports: https://github.com/Sustainscapes/FloraExam/issues
 Depends: 
     R (>= 2.10)
 Imports: 
+    Artscore,
     config (>= 0.3.1),
     dplyr,
     ggplot2,
