Added leaflet map if correct, inlcuded clarification of how to choose the next plot, enlarged the right or wrong text. Moved the hint botton above the answer

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ importFrom(Artscore,Artscore)
 importFrom(dplyr,filter)
 importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
+importFrom(dplyr,mutate_if)
 importFrom(dplyr,select)
 importFrom(dplyr,slice_sample)
 importFrom(dplyr,starts_with)
@@ -13,12 +14,18 @@ importFrom(ggplot2,coord_flip)
 importFrom(ggplot2,geom_boxplot)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,theme_bw)
+importFrom(ggplot2,xlab)
 importFrom(ggplot2,ylim)
 importFrom(golem,activate_js)
 importFrom(golem,add_resource_path)
 importFrom(golem,bundle_resources)
 importFrom(golem,favicon)
 importFrom(golem,with_golem_options)
+importFrom(leaflet,addCircles)
+importFrom(leaflet,addTiles)
+importFrom(leaflet,leaflet)
+importFrom(leaflet,leafletOutput)
+importFrom(leaflet,renderLeaflet)
 importFrom(plotly,add_trace)
 importFrom(plotly,ggplotly)
 importFrom(plotly,layout)
