Everything ready except for fixing the scatternary plot axis

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,6 +33,7 @@ importFrom(plotly,plot_ly)
 importFrom(plotly,plotlyOutput)
 importFrom(plotly,renderPlotly)
 importFrom(rlang,sym)
+importFrom(rmarkdown,render)
 importFrom(shiny,HTML)
 importFrom(shiny,column)
 importFrom(shiny,shinyApp)
