--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,7 @@ Version: 0.0.0.9000
 Authors@R: 
     person("Derek", "Corcoran", , "derek.corcoran.barrios@gmail.com", role = c("cre", "aut"))
 Description: Generates a basic shiny app as an example of the test you
-    would in the Danish Flora course.
+    would take in the Danish Flora course.
 License: AGPL (>= 3)
 URL: https://github.com/Sustainscapes/FloraExam
 BugReports: https://github.com/Sustainscapes/FloraExam/issues
@@ -19,14 +19,19 @@ Imports:
     leaflet,
     plotly,
     rlang,
+    rmarkdown,
     shiny (>= 1.7.4),
     shinyWidgets,
     stats,
     stringr,
     tidyr
 Suggests: 
+    bookdown,
+    htmlwidgets,
+    kableExtra,
     spelling,
-    testthat (>= 3.0.0)
+    testthat (>= 3.0.0),
+    webshot2
 Config/testthat/edition: 3
 Encoding: UTF-8
 Language: en-US
