New Dataset ready

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,7 +22,7 @@ importFrom(golem,bundle_resources)
 importFrom(golem,favicon)
 importFrom(golem,with_golem_options)
 importFrom(leaflet,addCircles)
-importFrom(leaflet,addTiles)
+importFrom(leaflet,addProviderTiles)
 importFrom(leaflet,leaflet)
 importFrom(leaflet,leafletOutput)
 importFrom(leaflet,renderLeaflet)
