Added median, changed dataset for habitat type, included pagedown

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,18 +4,22 @@ export(run_app)
 import(shiny)
 importFrom(Artscore,Artscore)
 importFrom(dplyr,filter)
+importFrom(dplyr,group_by)
 importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
 importFrom(dplyr,mutate_if)
 importFrom(dplyr,select)
 importFrom(dplyr,slice_sample)
 importFrom(dplyr,starts_with)
+importFrom(dplyr,summarise)
+importFrom(ggplot2,aes)
 importFrom(ggplot2,coord_flip)
 importFrom(ggplot2,geom_boxplot)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,theme_bw)
 importFrom(ggplot2,xlab)
 importFrom(ggplot2,ylim)
+importFrom(ggrepel,geom_text_repel)
 importFrom(golem,activate_js)
 importFrom(golem,add_resource_path)
 importFrom(golem,bundle_resources)
@@ -41,6 +45,7 @@ importFrom(shiny,tagAppendAttributes)
 importFrom(shiny,tagList)
 importFrom(shiny,tags)
 importFrom(shinyWidgets,switchInput)
+importFrom(stats,median)
 importFrom(stats,na.omit)
 importFrom(stringr,str_remove_all)
 importFrom(stringr,str_replace_all)
