Data table with colors

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,11 @@
 export(run_app)
 import(shiny)
 importFrom(Artscore,Artscore)
+importFrom(DT,dataTableOutput)
+importFrom(DT,datatable)
+importFrom(DT,formatStyle)
+importFrom(DT,renderDataTable)
+importFrom(DT,styleEqual)
 importFrom(dplyr,filter)
 importFrom(dplyr,group_by)
 importFrom(dplyr,left_join)
