--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -31,7 +31,7 @@ Imports:
 Suggests: 
     bookdown,
     ggtern,
-    gt,
+    kableExtra,
     spelling,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
