--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -33,7 +33,8 @@ Suggests:
     ggtern,
     kableExtra,
     spelling,
-    testthat (>= 3.0.0)
+    testthat (>= 3.0.0),
+    tinytex
 Config/testthat/edition: 3
 Encoding: UTF-8
 Language: en-US
