--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ importFrom(DT,datatable)
 importFrom(DT,formatStyle)
 importFrom(DT,renderDT)
 importFrom(DT,styleEqual)
+importFrom(dplyr,distinct)
 importFrom(dplyr,filter)
 importFrom(dplyr,group_by)
 importFrom(dplyr,left_join)
